Large screen bottom gap fix

--- a/css/scss/panels/rooms_and_games.scss
+++ b/css/scss/panels/rooms_and_games.scss
@@ -31,7 +31,8 @@
             // overflow-y: auto;
         }
         .dataTables_scrollBody{
-            height: 354px !important;
+            // height: 354px !important;
+            height: 354px;
         }
         table{
             th{
